--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "ws": "^8.0.0",
-    "axios": "^1.0.0"
+    "axios": "^1.10.0",
+    "ws": "^8.0.0"
   }
 }
